--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ section#cover{
 	background: url(images/beer-dark-bottle-light_2.jpg) center top no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
-	margin-bottom: -6em;
 }
 
 section#cover article{
@@ -136,8 +135,11 @@ section#cover .underline{
 }
 
 .divider{
-	min-height: 6em;
-	background: rgba(250, 250, 250, 0.85);
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	padding: 0.35em 0;
+	background: rgba(250, 250, 250, 0.75);
 }
 
 .divider.by-three .container > div{
@@ -154,7 +156,7 @@ section#cover .underline{
 }
 .divider.by-three .container > div:nth-child(3n+2){
 	border-width: 0 1px;
-	border-color: silver;
+	border-color: #999;
 	border-style: dotted;
 }
 
