--- a/style.css
+++ b/style.css
@@ -116,8 +116,8 @@ section#cover article{
 	font-family: Roboto Slab;
 	color: white;
 	text-align: center;
-	text-shadow: black 0 1px 3px;
 	margin-top: 15%;
+	text-shadow: #0D040A 0px 1px 2px, black 0 1px 0.1em;
 }
 
 section#cover h1{
@@ -132,11 +132,23 @@ section#cover #cta{
 }
 
 section#cover .underline{
-	border-bottom: 4px double rgba(250, 250, 250, 0.8);
+	border-bottom: 4px double rgba(0, 0, 0, 0.35);
 	display: inline-block;
 	min-width: 50%;
 	margin: 0 auto;
 	padding: 0 0 1rem;
+}
+
+section#cover .underline:after{
+	content: "";
+	display: block;
+	position: absolute;
+	bottom: -3px;
+	border-bottom: 1px solid white;
+	border-top: 1px solid white;
+	width: 100%;
+	height: 2px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0 0 3px 1px, inset rgba(0, 0, 0, 0.35) 0 0 1px 1px;
 }
 
 .divider{
