--- a/style.css
+++ b/style.css
@@ -163,6 +163,8 @@ section#cover .underline:after{
 	width: 100%;
 	padding: 0.85em 0;
 	background: rgba(250, 250, 250, 0.75);
+	box-shadow: inset rgba(255, 255, 255, 0.5) 0 45px 60px -15px, silver 0 -1px 0;
+    border-top: 1px solid white;
 }
 
 .divider.by-three .container > div{
